<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:apply="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Informacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apply:cardCornerRadius="@dimen/cardDimencion"
            android:elevation="0dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/altoimageview"
                    android:src="@drawable/banner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_que_es"
                    android:textSize="20sp"
                    android:textColor="@color/trueblue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_que_es_resp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_por_que"
                    android:textSize="20sp"
                    android:textColor="@color/trueblue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_por_que_resp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/altoimageview"
                    android:src="@drawable/banner2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_info"
                    android:textSize="20sp"
                    android:textColor="@color/trueblue"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/inicio_frag_tv_info_resp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</FrameLayout>